--- a/ders/index.html
+++ b/ders/index.html
@@ -42,6 +42,7 @@
   <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
   <li><a href="benzer.html">Benzerlik öbekleri</a>
+  <li><a href="mesahif.html">Mesâhif-i Kadîme</a>
 </ul>
 </div>
 <div class=gap> </div>
