--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -9,7 +9,8 @@
 <title>Mesâhif-i Kadîme</title>
 <style>
     table { font-size: small;}
-    td { min-width: 50px; }
+    td:nth-child(1) { width: 45px; }
+    td:nth-child(2) { width: 82px; }
 </style>
 
 <h2>Mesâhif-i Kadîme &emsp; <button class=goBack>◀</button></h2>
@@ -17,15 +18,28 @@
 <p>Dr Tayyar Altıkulaç'ın baş eseri olan <b>Mesâhif-i Kadîme</b>, en eski mushaflar hakkında bilgi verirken, Kur'ân-ı Kerim'in korunmuşluğunu gösteriyor.</p>
 <p>Hz Osman'ın aslından çoğaltarak 5 önemli merkeze gönderdiği (hepsi kaybolmuş) mushaflar arasında 44 adet harf farkı olduğu eskiden beri biliniyordu. Toplam 77.000 kelime içinde, anlamı değiştirmeyen 44 fark, binde yarım eder. Altıkulaç, 13 eski mushafı bu farklar açısından değerlendirerek her birinin hangi orijinalden kopyalandığını tahmin etmiş. Kitaptaki son tablo olarak, dünyada en çok basılmış "Matbu Fehd mushafı" da bu 44 fark üstünden değerlendirilmiş.</p>
 
-<table id=tablo></table>
-<p>Yukarıda ilk satırda, 2:116 ayetindeki <b>veqâlû</b> kelimesinin Şam mushafında vav olmadan yazıldığını okuyoruz. Bunun gibi, 6:63 ayetindeki <b>encânâ</b> kelimesi, Kûfe dışındaki 4 mushafta <b>enceytenâ</b> olarak yazılmış.</p>
+<details>
+  <p>Aşağıda ilk satırda, 2:116 ayetindeki <b>veqâlû</b> kelimesinin Şam mushafında vav olmadan yazıldığını okuyoruz. Bunun gibi, 6:63 ayetindeki <b>encânâ</b> kelimesi, Kûfe dışındaki 4 mushafta <b>enceytenâ</b> olarak yazılmış.</p>
+  <summary>Birinci tablo: Bakara-Tevbe</summary>
+  <table id=tablo1></table>
+</details><br>
+<details>
+  <p>Aşağıda ikinci satırda, 10:22 ayetindeki <b>yuseyyirukum</b> kelimesinin Şam mushafında <b>yenşurukum</b> yazıldığını okuyoruz. 44 fark içinde kelime değişikliği olan tek satır, muhtemelen bir hata olabilir. 21:4 ayetindeki <b>qâle</b> kelimesi, Kûfe dışındaki 4 mushafta <b>qul</b> olarak yazılmış.</p>
+  <summary>İkinci tablo: Tevbe-Yasin</summary>
+  <table id=tablo2></table>
+</details><br>
+<details>
+  <p>Aşağıda ilk satırda, 36:35 ayetindeki <b>amilethu</b> kelimesinin Kûfe mushafında hu olmadan yazıldığını okuyoruz. Bunun gibi, 46:15 ayetindeki <b>ihsânen</b> kelimesi, Kûfe dışındaki 4 mushafta <b>husnen</b> olarak yazılmış.</p>
+  <summary>Üçüncü tablo: Yasin-Leyl</summary>
+  <table id=tablo3></table>
+</details>
 
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
 </p>
 <script>
 "use strict";
-const DATA =
+const DATA1 =
 `2:116	qwl	Ş	vav eksik	veqâlû	qâlû
 2:132	wSy	Ş D	elif fazla	vevassâ	veevsâ
 3:133	srE	Ş D	vav eksik	vesâri'û	sâri'û
@@ -35,21 +49,44 @@ const DATA =
 5:54	rdd	Ş D	dal çift	yertedde	
 6:32	dwr	Ş	lam tek 	veled-dâru	
 6:63	njw	Ş B M D	te fazla	encânâ	enceytenâ
-6:137	$rk	Ş	vav > hemze	şurekâuhum	
+6:137	$rk	Ş	vav eksik	şurekâuhum	
 7:3 	*kr	Ş	ye fazla	tezekkerûn	yetezekkerûn
 7:43	kwn	Ş	vav eksik	vemâ kunnâ	mâ kunnâ
-7:75	qwl	Ş	vav fazla	qâlel-meleu	veqâlel-meleu
+7:75	qwl	Ş	vav fazla	qâlel	veqâlel
 7:141	nje	Ş	nun > elif	enceynâkum	encâkum
-9:100	tHt	M	min fazla	tahtehâ	min tahtihâ
-9:107	Ax*	Ş D	vav eksik	vellezîne	ellezîne
-10:22	syr	Ş	sin > şin	yuseyyirukum	yenşurukum
+9:100	tHt	M	min fazla	tahtehâ	min tahtihâ`
+const DATA2 = 
+`9:107	Ax*	Ş D	vav eksik	vellezîne	ellezîne
+10:22	syr	Ş	sin > şin	<small>yuseyyirukum</small>	yenşurukum
 17:93	qwl	Ş M	elif fazla	qul 	qâle
 18:36	xyr	Ş M D	hâ > humâ	minhâ	minhumâ
 18:95	mkn	M	nun çift	mekkenniy	
 21:4	qwl	Ş B M D	elif eksik	qâle	qul
 21:30	rAy	M	vav eksik	evelem	elem
-23:87	qwl	B	elif fazla	lillâh	allâh`
-function makeTable() {
+23:87	qwl	B	elif fazla	lillâh	allâh
+23:89	qwl	B	elif fazla	lillâh	allâh
+23:112	qwl	Ş B M D	elif fazla	qâle	
+23:114	qwl	Ş B M D	elif fazla	qâle	
+25:25	nzl	M	nun fazla	nuzzile	nunezzile
+26:217	wkl	Ş D	ve > fe	vetevekkel	fetevekkel
+27:21	Aty	M	nun çift	leye-tiyenniy	
+28:37	qwl	M	vav yok	veqâle	qâle`
+const DATA3 = 
+`36:35	Eml	K	hu eksik	'amilethu	'amilet
+39:64	Amr	Ş	nun çift	te-murunniy	
+40:21	$dd	Ş	hum > kum	minhum	minkum
+40:26	Zhr	Ş B M D	ev > ve	ev en	veen
+42:30	ksb	Ş D	fe eksik	febimâ	bimâ
+43:68	Ebd	Ş D	ye fazla	yâ'ibâdi	yâ'ibâdiy
+43:71	$hw	B K M	he eksik	teştehîhi	teştehî
+46:15	Hsn	Ş B M D	elif eksik	ihsânen	husnen
+47:18	Aty	K M	ye eksik	te-tiyehum	te-tîhim
+55:12	ESf	Ş	vav > elif	zul-'asfi	zel-'asfi
+55:78	jll	Ş	ye > vav	zil-celâli	zul-celâli
+57:10	kll	Ş	elif eksik	vekullen	vekullun
+57:24	gny	Ş D	huve eksik	huvel-ganiy	el-ganiy
+91:15	xwf	Ş D	ve > fe	velâ	felâ`
+function makeTable(tablo, DATA) {
   function line(str, i) {
     let [verse, root, mushaf, diff, w1, w2] = str.split('\t')
     let [c, v] = verse.split(':')
@@ -72,7 +109,9 @@ function goBack() {
 }
 for (let b of document.querySelectorAll('.goBack'))
     b.onclick = goBack
-makeTable()
+makeTable(tablo1, DATA1)
+makeTable(tablo2, DATA2)
+makeTable(tablo3, DATA3)
 </script>
 
 <script src="init.js"></script>
