ders/img folder

--- a/ders/enbiya.html
+++ b/ders/enbiya.html
@@ -15,7 +15,7 @@
 
 <table id=tablo></table>
 <p>
-<img src="enbiya.png" alt="Nübüvvet şeceresi">
+<img src="img/enbiya.png" alt="Nübüvvet şeceresi">
 </p>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
