--- a/ders/index.html
+++ b/ders/index.html
@@ -42,7 +42,8 @@
   <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
   <li><a href="benzer.html">Benzerlik öbekleri</a>
-  <li><a href="mesahif.html">Mesâhif-i Kadîme</a>
+  <li><a href="mesahif.html">Matbu Fehd mushafı</a>
+  <li><a href="kiraat.html">Kıraat farkları</a>
 </ul>
 </div>
 <div class=gap> </div>
