--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -21,7 +21,7 @@ en eski mushaflar hakkında bilgi verirken, Kur'ân-ı Kerim'in korunmuşluğunu
 <a href="img/Matbu Fehd mushafi.pdf" target=Kuran>burada</a> görülebilir</p>
 <p>Hz Osman'ın aslından çoğaltarak 5 önemli merkeze gönderdiği mushaflar arasında 44 adet harf farkı olduğu eskiden beri biliniyordu. Bu sayfada üç parça halinde verilen çizelgede kullanılan kısaltmalar, söz konusu merkezleri simgeliyor:<br>
 D Medine, M Mekke, K Kûfe, B Basra, Ş Şam </p>
-<p>Tabloların her satırında ayet numarasına dokununca, ayet <b>Iqra</b> yazılımda gösterilir. Kelimenin okunuşuna dokununca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
+<p>Tabloların her satırında ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımda gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.</p>
 <details>
   <p>Aşağıda ilk satırda, 2:116 ayetindeki <b>veqâlû</b> kelimesinin Şam mushafında <b>vav</b> olmadan yazıldığını görüyoruz. Bunun gibi, 6:63 ayetindeki <b>encânâ</b> kelimesi, Kûfe dışındaki 4 mushafta <b>enceytenâ</b> olarak yazılmış.</p>
   <summary>Birinci tablo: Bakara-Tevbe</summary>
@@ -45,7 +45,7 @@ Yani, bugün (Türkiye hariç) dünyanın her yerinde okunmakta olan Fehd mushaf
 <p>(*) Matbu Fehd mushafının daha çok bilinen adı "Medine mushafı"dır, 1985'den beri 
     <a target=Kuran href="https://en.wikipedia.org/wiki/King_Fahd_Complex_for_the_Printing_of_the_Holy_Quran#Production">her yıl milyonlarca</a> 
 basılmaktadır. Osmanî mushafla karışmasın diye, Altıkulaç'ın bu kitapta uygun gördüğü terimi kullandık.</p><br>
-<p>Dersler <button class=goBack>◀</button>
+<p>Dersler <button class=goBack>◀</button> &emsp; Temmuz 2024
 <br>
 </p>
 <script>
