--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -13,9 +13,9 @@
 
 <h2>Kıraat farkları &emsp; <button class=goBack>◀</button></h2>
 
-<p><i>Corpus Coranicum</i> -- 2007'de başlamış kapsamlı bir web sitesi, halen gelişmeye devam ediyor. Kıraat farklarını bu siteden takip ediyorum.</p>
-<p>Bu sayfada her örnekte koyu renkle gösterilen, Ebû Amr ed-Dânî'nin <i>et-Teysir</i> adlı eseri ana kaynak. Hicretten 400 yıl sonra yazılmış bu kitabı Altıkulaç da referans olarak kullanıyor, kıraat ilminde sağlam bir eser olduğunu biliyoruz. Lakin, sitede bundan başka çok sayıda kaynak kullanılmış, onların güvenilirliği hakkında bir bilgim yok. Aşağıdaki örnek sayfalarda görüldüğü gibi, bazıları makbul kıraat sayılmıyor. </p>
-<pre>et-Taisīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
+<p><i>Corpus Coranicum</i> -- 2007'de başlamış kapsamlı bir web sitesi, halen gelişmeye devam ediyor. Kıraat farklarını bu siteden aldığım birkaç örnek üstünde görelim.</p>
+<p>Bu sayfadaki her örnekte koyu renkle gösterilen, Ebû Amr ed-Dânî'nin <i>et-Teysīr</i> adlı eseri ana kaynak. Hicretten 400 yıl sonra yazılmış bu kitabı Altıkulaç da referans olarak kullanıyor, kıraat ilminde sağlam bir eser olduğunu biliyoruz. Lakin, sitede bundan başka çok sayıda kaynak kullanılmış, onların güvenilirliği hakkında bir bilgim yok. Bu nedenle, sağlam olduğunu bildiğim bir tek kaynak kullanıyorum. </p>
+<pre>et-Teysīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
 1 Nāfi`      Medine
 2 Ibn Kesīr  Mekke
 3 Ebū `Amr   Basra
@@ -24,14 +24,15 @@
 6 Hamza      Kûfe
 7 el-Kisā'ī  Kûfe
 </pre>
-
-<h3>Aynı imla</h3>
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımda gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır.
 </p>
+
+<h3>Aynı imla</h3>
+<p>Kıraat farklarının pek çoğu sadece şive farkı, anlam değişmiyor. Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor.</p>
 <p>Naziat <a name="v=79:15">79:15</a> &mdash;
     <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mûsâ</a> ⇒ <b>Mûsê</b> veya <b>Mûsiy</b>
     <img src="img/Naziat 15.png">
-    Kıraat farklarının pek çoğu sadece şive farkı, anlam değişmiyor. Bu ayette "Mûsâ" kelimesinin üç farklı okunuşu var. Diğer kıraatlere izin vermesi için kelimeyi elif yerine noktasız yâ ile yazıyoruz.
+    Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu var. Diğer kıraatlere izin vermesi için kelimeyi elif yerine noktasız yâ ile yazıyoruz.
 </p>
 <p>Maide <a name="v=5:6">5:6</a> &mdash;
     <a href="https://corpuscoranicum.de/en/verse-navigator/sura/5/verse/6/variants" target=Kuran>erculekum</a> ⇒ <b>erculikum</b> &emsp; ('ǧ' = cim)
@@ -44,10 +45,11 @@
     <img src="img/Hucurat 6.png">
     Bu ayeti iki imam, anlamı çok yakın olan farklı bir kelime ile okumuş. Harflerin noktası olmadığı için Kûfi yazıda aynı harfleri görüyoruz.
 </p>
+
 <h3>Farklı imla</h3>
-<p>44 ayetin okunuşuyla birlikte yazılışı da değişiyor. Altıkulaç'ın verdiği 
-    <a href="./mesahif.html" target="finder">çizelgede</a> 
-    hepsini görebilirsiniz. En önemli üç örneği buraya alıyorum.
+<p>44 ayetin okunuşuyla birlikte yazılışı da değişiyor. Altıkulaç'ın verdiği çizelgede
+    <a href="./mesahif.html" target="finder">imla farklarının</a> 
+hepsini görebilirsiniz. En önemli üç örneği buraya alıyorum.
 </p>
 <p>Hadid <a name="v=57:24">57:24</a> &mdash;
     <a href="https://corpuscoranicum.de/en/verse-navigator/sura/57/verse/24/variants" target=Kuran>huvel-ganiy</a> ⇒ <b>el-ganiy</b>
