--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -13,6 +13,12 @@
 
 <h2>Kıraat farkları &emsp; <button class=goBack>◀</button></h2>
 
+<p>Kuran-ı Kerim'in bir tek metin olmadığı, çok sayıda kelimenin farklı okunuşları olduğu iyi bilinen bir hakikattır. Bu farkların esas olarak iki sebebi var:</p>
+<ul>
+    <li>Lehçe ve şive farkları ile okumaya izin verilmiştir, ses yönünden zenginlik sağlar.</li>
+    <li>Farklar anlamı değiştiriyorsa, iki anlam da doğrudur, anlam yönünden zenginlik sağlar.</li>
+</ul>
+<p>Lakin, kimse kendine göre bir kıraat uyduramaz. Farklı kıraatler çok sayıdadır, isnad zinciri ile sahabeye kadar uzanır. Bir kıraatin geçerli olması için hem sözlü hem yazılı delil aranır: Sağlam bir isnad zinciri ve yazılı mushaflardan birine uygunluk. "Şu kelime böyle de okunabilir" diyenlerin yolu bu iki kural ile kapalıdır.</p>
 <p><i>Corpus Coranicum</i> -- 2007'de başlamış kapsamlı bir web sitesi, halen gelişmeye devam ediyor. Kıraat farklarını bu siteden aldığım birkaç örnek üstünde görelim.</p>
 <p>Bu sayfadaki her örnekte koyu renkle gösterilen, Ebû Amr ed-Dânî'nin <i>et-Teysīr</i> adlı eseri ana kaynak. Hicretten 400 yıl sonra yazılmış bu kitabı Altıkulaç da referans olarak kullanıyor, kıraat ilminde sağlam bir eser olduğunu biliyoruz. Lakin, sitede bundan başka çok sayıda kaynak kullanılmış, onların güvenilirliği hakkında bir bilgim yok. Bu nedenle, sağlam olduğunu bildiğim bir tek kaynak kullanıyorum. </p>
 <pre>et-Teysīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
@@ -24,17 +30,28 @@
 6 Hamza      Kûfe
 7 el-Kisā'ī  Kûfe
 </pre>
+
+<ol>Bu sayfadaki örnekleri, imlâyı değiştirmeyen dört grupta topladım, beşinci grup ayrı bir sayfada anlatılıyor:
+    <li>Şive farkları</li>
+    <li>Hareke farkları</li>
+    <li>Fiil kipi ve çekimi</li>
+    <li>Farklı kelime, aynı imlâ</li>
+    <li><a href="./mesahif.html" target="finder">Farklı imlâ</a></li>
+</ol>
+    
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımda gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
 </p>
 
-<h3>Aynı imla</h3>
-<p>Kıraat farklarının pek çoğu sadece şive farkı, anlam değişmiyor. Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor.</p>
-
+<h3>1. Şive farkları</h3>
+<p>Kıraat farklarının pek çoğu sadece şive ve lehçe farkı, yazılış ve anlam değişmiyor. Bunların da büyük çoğunluğu ayet sonundaki noktasız ye (elif maksûra) harflerinin okunuşuyla ilgili:</p>
 <p>Naziat <a name="v=79:15&b=muwsaY%60^">79:15</a> &mdash;
-    <b>Mûsâ</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mûsê veya Mûsiy</a>
+<b>Mûsâ</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mûsê veya Mûsiy</a>
     <img src="img/Naziat 15.png">
-    Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu var. Diğer kıraatlere izin vermesi için kelimeyi elif yerine noktasız yâ ile yazıyoruz.
+Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuşu var. Diğer kıraatlere izin vermesi için kelimeyi elif yerine noktasız yâ ile yazıyoruz.
 </p>
+
+<h3>2. Hareke farkları</h3>
+<p>Anlamı değiştirebilen bu farklarda kelime aynı, sadece seslendirmesi farklı.</p>
 <p>Maide <a name="v=5:6&r=rjl">5:6</a> &mdash;
     <b>erculekum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/5/verse/6/variants" target=Kuran>erculikum</a> &emsp; ('ǧ' = cim)
     <img src="img/Maide 6.png">
@@ -48,6 +65,46 @@
     <a name="v=38:13&b=lo_#ayokapi">38:13</a>.
     Medine, Mekke ve Şam kurrâsı, bu kelimeyi <b>leyke</b> şeklinde okumuş.
 </p>
+<h3>3. Fiil kipi ve çekimi</h3>
+<p>Şive farkı kadar yaygın olmayan bir fark da fiillerde gözleniyor. Fiilin hangi bâbda (kip) kullanıldığı, etken veya edilgenliği, hangi şahıs olduğu gibi hususlarda harf ya da hareke farkları kaydedilmiştir.</p>
+<p>Hicr <a name="v=15:8&r=nzl">15:8</a> &mdash;
+    <b>nunezzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tenezzelu veya tunezzelu</a>
+    <img src="img/Hicr 8.png">
+
+</p>
+
+<h3>4. Farklı kelime, aynı imlâ</h3>
+<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsini 13 ayette 9 kelime olarak aşağıda gösterdim.</p>
+<p>Bakara <a name="v=2:219&r=kbr">2:219</a> &mdash;
+    <b>kebîrun</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/219/variants" target=Kuran>kesîrun</a>
+    <img src="img/Bakara 219.png">
+
+</p>
+<p>Bakara <a name="v=2:259&r=n$z">2:259</a> &mdash;
+    <b>nunşizuhâ</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/2/verse/259/variants" target=Kuran>nunşiruhâ</a>
+    <img src="img/Bakara 259.png">
+
+</p>
+<p>Enam <a name="v=6:57&r=qSS">6:57</a> &mdash;
+    <b>yaqussu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/6/verse/57/variants" target=Kuran>yaqdi</a>
+    <img src="img/Enam 57.png">
+
+</p>
+<p>Yunus <a name="v=10:30&r=blw">10:30</a> &mdash;
+    <b>teblû</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/30/variants" target=Kuran>tetlû</a>
+    <img src="img/Yunus 30.png">
+
+</p>
+<p>Furkan <a name="v=25:48&r=b$r">25:48</a> &mdash;
+    <b>buşran</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/25/verse/48/variants" target=Kuran>neşran veya nuşran</a>
+    <img src="img/Furkan 48.png">
+
+</p>
+<p>Ankebut <a name="v=29:58&r=bwA">29:58</a> &mdash;
+    <b>...</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants" target=Kuran>lenusviyennehum</a>
+    <img src="img/Ankebut 58.png">
+
+</p>
 <p>Zuhruf <a name="v=43:19&r=Ebd">43:19</a> &mdash;
     <b>'ibâdu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/43/verse/19/variants" target=Kuran>'inde</a>
     <img src="img/Zuhruf 19.png">
@@ -58,29 +115,17 @@
     <img src="img/Hucurat 6.png">
     Bu ayeti iki imam, anlamı çok yakın olan farklı bir kelime ile okumuş. Harflerin noktası olmadığı için Kûfi yazıda aynı imlâyı görüyoruz.
 </p>
+<p>Tekvir <a name="v=81:24&r=Dnn">81:24</a> &mdash;
+    <b>bidanîn</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/81/verse/24/variants" target=Kuran>bizanîn</a>
+    <img src="img/Tekvir 24.png">
 
-<h3>Farklı imla</h3>
-<p>44 ayetin okunuşuyla birlikte yazılışı da değişiyor. Altıkulaç'ın verdiği çizelgede
-    <a href="./mesahif.html" target="finder">imla farklarının</a> 
-hepsini görebilirsiniz. En önemli üç örneği buraya alıyorum.
 </p>
-<p>Hadid <a name="v=57:24&b=huwa">57:24</a> &mdash;
-    <b>huvel-ganiy</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/57/verse/24/variants" target=Kuran>el-ganiy</a>
-    <img src="img/Hadid 24.png">
-    İki kıraat imamı "huve" kelimesini okumamış. Anlam değişmiyor ama metin farklı.
-</p>
-<p>Yasin <a name="v=36:35&r=Eml">36:35</a> &mdash;
-    <b>'amilethu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/36/verse/35/variants" target=Kuran>'amilet</a> 
-    <img src="img/Yasin 35.png">
-    Kûfe'nin üç imamı "hu" ekini okumamış. Bu ayetin iki farklı okunuşu anlam farklarına yol açıyor:
-    <a href="https://kuranmeali.com/AyetKarsilastirma.php?sure=36&ayet=35" target=Kuran>Karsilastirma</a>
-</p>
-<p>Yunus <a name="v=10:22&r=syr">10:22</a> &mdash;
-    <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
-    <img src="img/Yunus 22.png">
-    Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Kûfi yazıda fark kolayca görülmüyor. Frklı imlâsı olan 44 ayet içinde en önemlisi bu olsa gerek. 
-</p>
+<br>
+<p>Kaynak:</p>
 
+<h3>5. <a href="./mesahif.html" target="finder">Farklı imlâ</a></h3>
+<p>Bazı ayetlerin okunuşuyla birlikte yazılışı da değişiyor. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. Sonuç olarak, bugün dünyanın her yerinde okunmakta olan mushaflar ile Hz Osman tarafından Kûfe'ye gönderilen el yazması arasında sadece 3 harf farkı var.
+</p>
 <p></p>
 <br>
 <p>Dersler <button class=goBack>◀</button> &emsp; Temmuz 2024<br>
