target KK => Kuran

--- a/cuma/index.html
+++ b/cuma/index.html
@@ -42,9 +42,9 @@
   <li><a href="kurban.html">Kurban Yakınlıktır</a>
   <li><a href="hamim.html">Hâ-Mîm Sureleri</a>
 </ul>
-<p>Videolar: <a target=KK
+<p>Videolar: <a target=Kuran
 href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">
-Son 30</a> &emsp; <a target=KK
+Son 30</a> &emsp; <a target=Kuran
 href="https://www.youtube.com/playlist?list=PLBDiqooDrrutgeVuWmpz5619chQnpOGcA">YouTube</a>
 </p>
 </div>
