--- a/ders/index.html
+++ b/ders/index.html
@@ -39,11 +39,9 @@
   <li><a href="isimler.html">Özel isimler</a>
   <li><a href="huruf.html">Şifreli harfler</a>
   <li><a href="sunum4.2.html">Benzerlik V4.2</a>
-  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
-  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
+  <li><a href="/Kuran/benzerlik.html" target=Kuran>Benzerlik örnekleri</a>
+  <li><a href="/Kitap/KK/korunmus.html" target=Kuran>Korunmuşluk örnekleri</a>
   <li><a href="benzer.html">Benzerlik öbekleri</a>
-  <li><a href="kiraat.html">Kıraat farkları</a>
-  <li><a href="mesahif.html">İmla farkları</a>
 </ul>
 </div>
 <div class=gap> </div>
@@ -59,10 +57,10 @@
   <li><a href="06.html">Fiil çekimi</a>
   <li><a href="07.html">Kelime türetme</a>
 </ol>
-<p>Videolar: <a target=KK
+<p>Videolar: <a target=Kuran
 href="https://maeyler.github.io/JS/api/YouTube#PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
 2021</a> &emsp;
-<a target=KK
+<a target=Kuran
 href="https://maeyler.github.io/JS/api/YouTube#PLqPY2DLsMnVALLfBK-QjhOhvbj8miw399">
 2022</a></p>
 </div>
