--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -11,7 +11,7 @@
     img { max-width: 400px; }
 </style>
 
-<h2>Kıraat farkları &emsp; <button class=goBack>◀</button></h2>
+<h2>Kıraat farkları &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
 <p>Kuran-ı Kerim'in bir tek metin olmadığı, çok sayıda kelimenin farklı okunuşları olduğu iyi bilinen bir hakikattır. Bu farkların esas olarak iki sebebi var:</p>
 <ul>
@@ -109,7 +109,7 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p>Zuhruf <a name="v=43:19&r=Ebd">43:19</a> &mdash;
     <b>'ibâdu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/43/verse/19/variants" target=Kuran>'inde</a>
     <img src="img/Zuhruf 19.png">
-    Medine, Mekke ve Şam kurrâsı, bu kelimeyi <b>'inde</b> şeklinde okumuş.
+    Mekke ve Şam kurrâsı, bu kelimeyi <b>'inde</b> şeklinde okumuş.
 </p>
 <p>Hucurat <a name="v=49:6&r=byn">49:6</a> &mdash;
     <b>fetebeyyenû</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/49/verse/6/variants" target=Kuran>fetesebbetû</a> 
@@ -133,6 +133,6 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 </p>
 <p></p>
 <br>
-<p>Dersler <button class=goBack>◀</button> &emsp; Temmuz 2024<br>
+<p>Dersler <button><a href="kadime.html">◀</a></button> &emsp; Temmuz 2024<br>
 </p>
 <script src="init.js"></script>
