--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -62,9 +62,9 @@ Bu ayette "Mûsâ" kelimesinin yerel şive farkından gelen üç farklı okunuş
 <p>Şuara <a name="v=26:176&b=lo_#ayokapi">26:176</a> &mdash;
     <b>ashâbul-eyke</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/26/verse/176/variants" target=Kuran>ashâbu leyke</a>
     <img src="img/Suara 176.png">
-    Anlamı değiştirebilen bu okuyuş bir ayette daha geçiyor: 
-    <a name="v=38:13&b=lo_#ayokapi">38:13</a>.
-    Medine, Mekke ve Şam kurrâsı, bu kelimeyi <b>leyke</b> şeklinde okumuş. Demek "Leyke" diye bir yer ismi var.
+    Eyke ashabından bahseden iki ayette (15:78 ve 50:14) kıraat farkı yok. Medine, Mekke ve Şam kurrâsı, burada ve 
+    <a name="v=38:13&b=lo_#ayokapi">38:13</a> ayetinde 
+    kelimeyi <b>leyke</b> şeklinde okumuş. Demek "Leyke" diye bir yer ismi var.
 </p>
 <h3>3. Fiil kipi ve çekimi</h3>
 <p>Şive farkı kadar yaygın olmayan bir fark da fiillerde gözleniyor. Fiilin hangi bâbda (kip) kullanıldığı, etken veya edilgenliği, hangi şahıs olduğu gibi hususlarda harf ya da hareke farkları kaydedilmiştir.</p>
