--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -33,13 +33,12 @@
 </pre>
 Bu sayfadaki örnekleri, imlâyı değiştirmeyen dört grupta topladım, beşinci grup ayrı bir sayfada anlatılıyor:
 <ol>
-    <li>Şive farkları</li>
-    <li>Hareke farkları</li>
-    <li>Fiil kipi ve çekimi</li>
-    <li>Farklı kelime, aynı imlâ</li>
-    <li><a href="./mesahif.html" target="finder">Farklı imlâ</a></li>
+    <li>Şive/lehçe farkları -- çok sayıda, anlam değişmez</li>
+    <li>Hareke farkları -- 100 kadar ayet, anlam değişebilir</li>
+    <li>Fiil kipi ve çekimi -- daha az sayıda, esas anlam değişmez</li>
+    <li>Farklı kelime, aynı imlâ -- noktalama farkı, 13 ayette 9 kelime</li>
+    <li><a href="./mesahif.html" target="finder">Farklı imlâ</a> -- 44 ayet, biri hariç hepsi harf farkı</li>
 </ol>
-    
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
 </p>
 
