--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -115,7 +115,7 @@ const DATA1 =
 7:43	kwn	S	vav 		vemâ kunnâ	mâ kunnâ
 7:75	qwl	S		 vav	qâle	veqâle
 7:141	nje	S	nun	elif	enceynâkum	encâkum
-9:100	tHt	C		 min	tahtehâ	min tahtihâ
+9:100	tHt	C		 <b>min</b>	tahtehâ	min tahtihâ
 9:107	Ax*	S M	vav 		vellezîne	ellezîne
 10:22	syr	S	(syr)	(nşr)	<small>yuseyyirukum</small>	yenşurukum	yellow
 17:93	qwl	S C		 elif	qul 	qâle	pink
@@ -143,7 +143,7 @@ const DATA1 =
 55:12	ESf	S	vav	elif	zul-'asfi	zel-'asfi
 55:78	jll	S	ye	vav	zil-celâli	zul-celâli
 57:10	kll	S	elif 		vekullen	vekullun
-57:24	gny	S M	huve 		huvel-ganiy	el-ganiy
+57:24	gny	S M	<b>huve</b> 		huvel-ganiy	el-ganiy
 91:15	xwf	S M	ve	fe	velâ	felâ`
 function makeTable(tablo, DATA) {
   function line(str, i) {
