--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -6,7 +6,7 @@
 <meta name="description" content="The oldest sheets of Quran" />
 <link rel="stylesheet" href="ders.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
-<title>İmlâ farkları</title>
+<title>Kayıtlı imlâ farkları</title>
 <style>
     img { max-width: 400px; }
     .pink { background-color: #edd; }
@@ -32,7 +32,7 @@
   }
 </style>
 
-<h2>İmlâ farkları &emsp; <button><a href="kadime.html">◀</a></button></h2>
+<h2>Kayıtlı imlâ farkları &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
 <p>Kuran-ı Kerim'de <a href="./kiraat.html" target="finder">kıraat farklarının</a> varlığı ve bu farkların ne olduğu tevatür derecesinde bilinmektedir. Evet, pek çoğu için imlâ değişmiyor, ama 40 kadar ayette harf farkları var. Aşağıda tamamı verilen listenin sarı işaretlenen bir satırında kelimenin değiştiğini görüyoruz, diğerleri hep harf farkı.</p>
 <p>Kıraat konusunu anlamayan bazı şarkiyatçılar, mushaflarda olabilecek imlâ farklarını "yazıcı hatası" olarak görüyorlar. İslam alimleri ise, Hz Osman devrinde çoğaltılan ilk mushaflarda hata kabul etmiyor; sahabenin çok sıkı kontrolünden geçtiği için az sayıdaki bu farkların "tevatürle bilinen" kıraat farkı olduğunu söylüyor.</p>
@@ -67,7 +67,7 @@ erken dönem mushaflar hakkında bilgi verirken, Kur'ân-ı Kerim'in korunmuşlu
   Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. Tablodaki 44 ayet içinde kelimenin değiştiği tek yer bu, aşağıda sarı işaretli.
 </p>
 
-<h3>İmlâ farklarının tamamı</h3>
+<h3>Kayıtlı imlâ farklarının tamamı</h3>
 <p>Hz Osman'ın aslından çoğaltarak 5 önemli merkeze gönderdiği mushaflar arasındaki harf farkları eskiden beri biliniyordu. Aşağıdaki tabloda kullanılan kısaltmalar, söz konusu merkezleri simgeliyor:<br>
 M Medine, C Mekke, K Kûfe, B Basra, S Şam/Suriye <br>
 (Şarkiyatçıların kullandığı kısaltma harfleri)</p>
