--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -11,7 +11,7 @@
     img { max-width: 400px; }
 </style>
 
-<h2>Kıraat farkları &emsp; <button><a href="kadime.html">◀</a></button></h2>
+<h2>Geçerli kıraat farkları &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
 <p>Kuran-ı Kerim'in bir tek metin olmadığı, çok sayıda kelimenin farklı okunuşları olduğu iyi bilinen bir hakikattır. Bu farkların esas olarak iki sebebi var:</p>
 <ul>
