--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -6,7 +6,7 @@
 <meta name="description" content="The oldest sheets of Quran" />
 <link rel="stylesheet" href="ders.css" media="all">
 <link rel="icon" href="/Kuran/image/icon.png">
-<title>Kayıtlı imlâ farkları</title>
+<title>İmlâ farkları</title>
 <style>
     img { max-width: 400px; }
     .pink { background-color: #edd; }
